--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^5.0.1",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "@stripe/stripe-js": "^7.3.0",
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
